@@ -103,14 +103,12 @@ CloseZStream (ZStream *zstream)
 
 	status = 0;
 	if (zstream->compress) {
-		if (zstream->stream->total_out) {
-			do {
-				status = deflate (zstream->stream, Z_FINISH);
-				flush_status = Flush (zstream);
-			} while (status == Z_OK); /* We want Z_STREAM_END or error here here */
-			if (status == Z_STREAM_END)
-				status = flush_status;
-		}
+		do {
+			status = deflate (zstream->stream, Z_FINISH);
+			flush_status = Flush (zstream);
+		} while (status == Z_OK); /* We want Z_STREAM_END or error here here */
+		if (status == Z_STREAM_END)
+			status = flush_status;
 		deflateEnd (zstream->stream);
 	} else {
 		inflateEnd (zstream->stream);
